# django-docs-tutorial

django-docs-tutorial/: pyproject.toml
django-docs-tutorial/mysite/mysite/: settings.py
mysite/: pyproject.toml
mysite/polls_app/: db.sqlite3
mysite/polls_app/polls/: admin.py  models.py  tests.py  views.py
mysite/polls_app/polls/migrations/: 0001_initial.py
mysite/polls_app/polls/static/polls/: style.css
mysite/polls_app/polls/templates/polls/: detail.html  index.html  results.html
mysite/polls_app/polls_app/: asgi.py  settings.py  urls.py  wsgi.py
