[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["rajahwu <vmradford@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.7"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
